Remove Java 7 dependency